finished home page

--- a/agency.html
+++ b/agency.html
@@ -59,13 +59,22 @@
       </div>
 
       <nav id="navbar" class="navbar">
+
         <ul>
-          <li><a class="nav-link scrollto" href="kelly.html">Kelly AI</a></li>
-          <li><a class="nav-link scrollto active" href="jason.html">Jason AI</a></li>
-          <li><a class="nav-link scrollto" href="kenneth.html">Kenneth AI</a></li>
-          <li><a class="nav-link scrollto" href="diagnosis.html">Differential Diagnostic AI</a></li>
-          <li><a class="nav-link scrollto active" href="agency.html">Incorporating ChatGPT into Your Business</a></li>
-          <li><a class="getstarted scrollto" href="agency.html">Work With Us</a></li>
+          <li><a class="nav-link scrollto" href="pricing.html">AI Roleplay For Education</a></li>
+          <li class="dropdown"><a href="#"><span>AI Doctors</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="kelly.html">Kelly - Sexual Health AI</a></li>
+              <li><a href="jason.html">Jason - Nutrition & Fitness AI</a></li>
+              <li><a href="kenneth.html">Kenenth - Mental health & Well-being AI</a></li>
+              <li><a href="diagnosis.html">Differential Diagnstic AI</a></li>
+              <li><a href="telemed.html">Tabmed Telemedicine AI App</a></li>
+            </ul>
+          </li>
+          <li><a class="nav-link active scrollto" href="agency.html">Our Agency</a></li>
+          <li><a class="nav-link scrollto" href="pricing.html">Pricing</a></li>
+          <li><a class="nav-link scrollto" href="https://app.tabmed.hk">Sign In</a></li>
+          <li><a class="getstarted scrollto" href="pricing.html">Build Your Chatbot Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -79,18 +88,19 @@
       <div class="row">
         <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1">
           <div>
-            <h1 class="mb-4">🇭🇰 We Help You Build ChatGPT Powered<br><span
+            <h1 class="mb-4">👨🏻‍💻We Help You Build Custom AI Powered<br><span
                class="txt-rotate"
                data-period="400"
                data-rotate='[ "Customer Support.", "Lead Generator.", "Customer Engager.", "Appointment Scheduler.", "Job Processer.", "Order Tracker", "Sales & Promoter", "Feedback Collector", "Event Registrator", "Billing & Payment", "FAQ Automator."]'></span></h1>
 
-            <h2>💬 We Empower Businesses with AI Chatbots Seamlessly Integrated into WhatsApp, Facebook Messenger, the Web or in ChatGPT itself via <a href="https://openai.com/blog/chatgpt-plugins" target="_blank" style="text-decoration:none">ChatGPT plugins</a>.<br><br>
+            <h2>💬 We Empower Businesses with AI Chatbots Seamlessly Integrated into WhatsApp, Facebook Messenger, Instagram, Websites and more*.<br><br>
             📈 As the <a href="https://www.grandviewresearch.com/industry-analysis/artificial-intelligence-ai-market" target="_blank" style="text-decoration:none">AI industry is set to soar to $1.81 trillion by 2030</a>, it's essential for your business to stay ahead.<br><br>🔝 MIT Sloan Management reports that <a href="https://web-assets.bcg.com/1e/4f/925e66794465ad89953ff604b656/mit-bcg-expanding-ai-impact-with-organizational-learning-oct-2020-n.pdf" target="_blank" style="text-decoration:none">9 in 10 businesses believe AI will give them an edge over their rivals</a>.<br><br>👉 Enhance customer service, generate leads, and propel growth with our tailored solutions.</h2>
             <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
             <a href="tel:+85269025557" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-telephone-fill"></i>Call Us</button></a>
             <a href="https://wa.me/85269025557" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-whatsapp"></i>WhatsApp Us</button></a>
             <a target="_blank" style="text-decoration:none" href="mailto: tabmedhk@gmail.com"><button id="myBtn"  class="download-btn"><i class="bi bi-envelope-heart-fill"></i>Email Us</button></a>
+            <br><small>*Custom chatbots and AI solutions can be integrated with Airtable, Asana, Basecamp, Facebook Messenger, Github, Gmail, Hootsuite, Hubspot, Instagram, Intercom, Jira, LINE, Linear, Mailchimp, Microsoft Teams, Notion, Salesforce, Shopify, Slack, Stripe, Sunshine, Telegram, Trello, Twilio, Viber, Vonage, WhatsApp, Zapier, Zendesk, Zoom.</small>
 
 
           </div>
@@ -110,8 +120,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h1>10x Your Customer Engagement With ChatGPT + ALL Your Business Data</h1>
-          <p><strong>What If ChatGPT Knew ALL Your Business Content?</strong> Here at TabMed, we build and handle the entire Customer Engagement AI Platform on Whatsapp/FaceBook Messenger/your website for your business to grow Customer <strong>Engagement, Employee Efficiency and Revenue</strong> with your own business data + ChatGPT.</p>
+          <h1>10x Your Customer Engagement With AI + YOUR Business Data</h1>
+          <p><strong>What If ChatGPT Knew ALL Your Business Content?</strong> Here at Tabmed, we build and handle the entire Customer Engagement AI Platform on Whatsapp/Instagram/your website etc* for your business to grow Customer <strong>Engagement, Employee Efficiency and Revenue</strong> with your own business data + ChatGPT.</p>
         </div>
 
             <div class="content d-flex flex-column justify-content-center">
@@ -160,10 +170,10 @@
       <div class="container">
 
         <div class="row content">
-          <div class="col-md-4" data-aos="fade-right">
+          <div class="col-md-5" data-aos="fade-right">
             <img src="assets/img/agency/agency2.png" class="img-fluid" alt="">
           </div>
-          <div class="col-md-8 pt-4" data-aos="fade-up">
+          <div class="col-md-7 pt-4" data-aos="fade-up">
             <h3>Discover the Power of ChatGPT: Revolutionizing Business Communication</h3>
             <p>
               ChatGPT is transforming the way businesses communicate and interact with their customers. By understanding and generating <strong>human-like </strong>responses, ChatGPT-powered chatbots create engaging and dynamic conversations, delivering exceptional customer experiences across multiple platforms. With its ability to <strong>handle complex tasks</strong> and respond to a <strong>vast array of inquiries</strong>, ChatGPT is becoming an indispensable tool for businesses seeking to optimize their customer support and outreach efforts.
@@ -183,16 +193,16 @@
             </p>
             <a href="tel:+85269025557" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-telephone-fill"></i>Call Us</button></a>
             <a href="https://wa.me/85269025557" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-whatsapp"></i>WhatsApp Us</button></a>
-            <a target="_blank" style="text-decoration:none" href="mailto: tabmedhk@gmail.com"><button id="myBtn"  class="download-btn"><i class="bi bi-envelope-heart-fill"></i>Email Us</button></a>
+            <a target="_blank" style="text-decoration:none" href="mailto: info@tabmed.hk"><button id="myBtn"  class="download-btn"><i class="bi bi-envelope-heart-fill"></i>Email Us</button></a>
 
           </div>
         </div>
 
         <div class="row content">
-          <div class="col-md-4 order-1 order-md-2" data-aos="fade-left">
+          <div class="col-md-5 order-1 order-md-2" data-aos="fade-left">
             <img src="assets/img/agency/agency3.png" class="img-fluid" alt="">
           </div>
-          <div class="col-md-8 pt-5 order-2 order-md-1" data-aos="fade-up">
+          <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-up">
             <h3>AI Fine-Tuning & Training: Tailored Solutions for Your Business</h3>
             <p class="fst-italic">
               We specialize in fine-tuning and training ChatGPT-driven chatbots to align seamlessly with your business data, objectives, industry, and target audience. Our customized solutions ensure that your AI chatbot not only understands your customers' needs but also communicates in a way that reflects your brand's voice and values.
@@ -209,30 +219,30 @@
             </ul>
             <a href="tel:+85269025557" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-telephone-fill"></i>Call Us</button></a>
             <a href="https://wa.me/85269025557" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-whatsapp"></i>WhatsApp Us</button></a>
-            <a target="_blank" style="text-decoration:none" href="mailto: tabmedhk@gmail.com"><button id="myBtn"  class="download-btn"><i class="bi bi-envelope-heart-fill"></i>Email Us</button></a>
+            <a target="_blank" style="text-decoration:none" href="mailto: info@tabmed.hk"><button id="myBtn"  class="download-btn"><i class="bi bi-envelope-heart-fill"></i>Email Us</button></a>
 
           </div>
         </div>
 
         <div class="row content">
-          <div class="col-md-4" data-aos="fade-right">
+          <div class="col-md-5" data-aos="fade-right">
             <img src="assets/img/agency/agency4.png" class="img-fluid" alt="">
           </div>
-          <div class="col-md-8 pt-5" data-aos="fade-up">
+          <div class="col-md-7 pt-5" data-aos="fade-up">
             <h3>Why Choose Us as Your ChatGPT Agency</h3>
-            <p>TabMed, a leader in emerging technology, has developed innovative AI chatbots like <a href="kelly.html" target="_blank">Kelly</a>, <a href="kelly.html" target="_blank">Jason</a>, and <a href="kelly.html" target="_blank">Kenneth</a> to educate the Hong Kong population on sexual, physical, and mental health. We're eager to collaborate with your business to boost growth by integrating AI-powered chatbots into WhatsApp, FaceBook Messenger or your website for exceptional customer service and lead generation.</p>
+            <p>Tabmed, a leader in emerging technology, has developed innovative AI chatbots like <a href="kelly.html" target="_blank">Kelly</a>, <a href="kelly.html" target="_blank">Jason</a>, and <a href="kelly.html" target="_blank">Kenneth</a> to educate the Hong Kong population on sexual, physical, and mental health. We're eager to collaborate with your business to boost growth by integrating AI-powered chatbots into WhatsApp, FaceBook Messenger or your website for exceptional customer service and lead generation.</p>
             <p>Fundamentally at our core, we recognize the importance of outstanding customer experience for your business's success. Our bespoke ChatGPT solutions are tailored to meet your specific requirements, ensuring that our chatbots deliver valuable information and support while remaining engaging and accessible.</p>
             <p>Reach out to us to explore how ChatGPT can elevate your business and fulfill your unique goals. Our team is devoted to crafting a captivating and engaging brand experience for your customers.</p>
             <a href="tel:+85269025557" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-telephone-fill"></i>Call Us</button></a>
             <a href="https://wa.me/85269025557" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-whatsapp"></i>WhatsApp Us</button></a>
-            <a target="_blank" style="text-decoration:none" href="mailto: tabmedhk@gmail.com"><button id="myBtn"  class="download-btn"><i class="bi bi-envelope-heart-fill"></i>Email Us</button></a>
+            <a target="_blank" style="text-decoration:none" href="mailto: info@tabmed.hk"><button id="myBtn"  class="download-btn"><i class="bi bi-envelope-heart-fill"></i>Email Us</button></a>
 
 
           </div>
         </div>
 
         <div class="row content">
-            <h3 class="text-center">TabMed Helps You Integrate AI for Seamless Business Growth</h3>
+            <h3 class="text-center">Tabmed Helps You Integrate AI for Seamless Business Growth</h3>
             <p class="fst-italic text-center">
               At our core, we help businesses boost customer engagement, streamline operations, and expanding global reach by leveraging cutting-edge AI technology such as <strong><a href="https://openai.com/product/gpt-4" target="_blank">GPT3.5/GPT4</a>, <a href="https://openai.com/product/dall-e-2" target="_blank">Dall-E 2</a>, <a href="https://stablediffusionweb.com/" target="_blank">Stable Diffusion</a>, <a href="https://www.midjourney.com/" target="_blank">Midjourney</a>, <a href="https://www.perplexity.ai/" target="_blank">Perplexity</a>, <a href="https://www.anthropic.com/" target="_blank">Anthropic</a>, <a href="https://openai.com/research/whisper" target="_blank">Whisper API</a></strong> etc. Businesses can differentiate themselves from their competitors and stay ahead in an ever-evolving market.
             </p>
@@ -264,7 +274,7 @@
           <div class="col-md-4 pt-5" data-aos="fade-up">
             <h4>📊 Data-Driven Insights</h4>
             <p>
-              Leverage TabMed's expertise in ChatGPT integration to gather valuable data on customer preferences and behavior. <br><br>This data-driven approach helps you understand your audience better, enabling informed decision-making and targeted marketing efforts.
+              Leverage Tabmed's expertise in ChatGPT integration to gather valuable data on customer preferences and behavior. <br><br>This data-driven approach helps you understand your audience better, enabling informed decision-making and targeted marketing efforts.
             </p>
           </div>
           <div class="col-md-4 pt-5" data-aos="fade-up">
