--- a/index.html
+++ b/index.html
@@ -69,14 +69,6 @@
           <li><a class="nav-link scrollto" href="pricing.html">AI Roleplay For Education</a></li>
           <li class="dropdown"><a href="#"><span>AI Doctors</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-
-              <!-- <li class="dropdown"><a href="#"><span>Dr. Bots</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="kelly.html">Kelly - Sexual Health AI</a></li>
-                  <li><a href="jason.html">Jason - Nutrition & Fitness AI</a></li>
-                  <li><a href="kenneth.html">Kenenth - Mental health & Well-being AI</a></li>
-                </ul>
-              </li> -->
               <li><a href="kelly.html">Kelly - Sexual Health AI</a></li>
               <li><a href="jason.html">Jason - Nutrition & Fitness AI</a></li>
               <li><a href="kenneth.html">Kenenth - Mental health & Well-being AI</a></li>
@@ -84,23 +76,9 @@
               <li><a href="telemed.html">Tabmed Telemedicine AI App</a></li>
             </ul>
           </li>
-          <!-- <li class="dropdown"><a href="#"><span>Use Cases</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Public Health Education</a></li>
-              <li><a href="#">Research & Meta-analysis</a></li>
-              <li><a href="#">Course Mentor & Student Companion</a></li>
-              <li><a href="#">Role Play & Stimulation</a></li>
-              <li><a href="#">Documentation</a></li>
-              <li><a href="#">Internal Training</a></li>
-              <li><a href="#">24/7 Customer Support</a></li>
-            </ul>
-          </li> -->
-          <!-- <li><a class="nav-link scrollto" href="https://tabmed.mintlify.app">Documentation</a></li> -->
           <li><a class="nav-link scrollto" href="agency.html">Our Agency</a></li>
           <li><a class="nav-link scrollto" href="pricing.html">Pricing</a></li>
           <li><a class="nav-link scrollto" href="https://app.tabmed.hk">Sign In</a></li>
-          <!-- <li><a class="nav-link scrollto" href="diagnosis.html">Differential Diagnostic AI</a></li> -->
-          <!-- <li><a class="nav-link scrollto" href="agency.html">Incorporating ChatGPT into Your Business</a></li> -->
           <li><a class="getstarted scrollto" href="pricing.html">Build Your Chatbot Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -307,7 +285,7 @@
               <div class="row justify-content-center">
                  <div class="col-lg-10">
 
-                    <iframe src="https://app.tabmed.hk/chatbot/embed/de71a71e-75a9-4a9c-9d4f-c9d99807c416" width="100%" height="600" frameborder="0" ></iframe>
+                    <iframe src="https://app.tabmed.hk/chatbot/embed/95574d6c-d5e7-4629-9bf0-543d52c2bca1" width="100%" height="600" frameborder="0" ></iframe>
                  </div>
               </div>
               <!-- row -->
@@ -417,57 +395,6 @@
               </div>
             </div>
 
-            <div class="row content">
-                <div class="text-center">
-                  <img class="agency-logo" src="assets/img/tabmedlogo-agency.png" alt="">
-                </div>
-                <h3 class="text-center">TabMed Helps You Enable and Execute Your Virtual Care Strategy</h3>
-                <p class="fst-italic text-center">
-                  TabMed is an ideal partner for family, vetinary, dental, specialised and mental health clinics. Why partner with us? Here are some benefits to allow you to stay competitive:
-                </p>
-
-              <div class="col-md-4  pt-5 order-1 order-md-2" data-aos="fade-up">
-                <h4>Improved Patient Access</h4>
-                <p>
-                  Reach a wider patient base, including those who may not be able to come into the clinic for an in-person visit.
-                </p>
-              </div>
-              <div class="col-md-4 pt-5 order-2 order-md-1" data-aos="fade-up">
-                <h4>Increased Efficiency</h4>
-                <p>
-                  Help your clinic save time and resources by reducing the need for in-person visits and streamlining appointment scheduling.
-                </p>
-              </div>
-              <div class="col-md-4 pt-5 order-2 order-md-1" data-aos="fade-up">
-                <h4>Increased Patient Satisfaction</h4>
-                <p>
-                  Improve patient satisfaction by providing your patients wih more convenient and accessible care.
-                </p>
-              </div>
-              <div class="col-md-4 pt-5 order-1 order-md-1" data-aos="fade-up">
-                <h4>Increased Revenue</h4>
-                <p>
-                  Attract new patients and increase revenue by offering additional services and expanding your reach.
-                </p>
-              </div>
-              <div class="col-md-4 pt-5" data-aos="fade-up">
-                <h4>Reduced Operational Costs</h4>
-                <p>
-                  Leverage AI-assisted technology and services to execute a scalable, digitally-enabled care strategy.
-                </p>
-              </div>
-              <div class="col-md-4 pt-5" data-aos="fade-up">
-                <h4>Increased Patient Outcomes</h4>
-                <p>
-                  Allow more timely and frequent follow-up care, which will be beneficial for patients with chronic conditions.
-                </p>
-              </div>
-
-            </div>
-
-
-
-
           </div>
         </section><!-- End Details Section -->
 
@@ -490,6 +417,88 @@
 
       	</div>
     </div>
+
+    <!-- ======= Frequently Asked Questions Section ======= -->
+   <section id="faq" class="faq section-bg">
+      <div class="container">
+        <div class="text-center">
+          <img class="agency-logo" src="assets/img/tabmedlogo-agency.png" alt="">
+        </div>
+
+        <div class="section-title">
+
+          <h1>Tabmed Empowers Your Business with AI Automations & Solutions</h1>
+          <p class="mb-3">Tabmed is not just an AI automation agency; we are your strategic partner in harnessing the power of cutting-edge technologies to drive business growth and efficiency through chatbots and automation. </p>
+          <a target="_blank" style="text-decoration:none" href="mailto: tabmedhk@gmail.com"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-right"></i>Learn more about us</button></a>
+       </div>
+
+        <div class="accordion-list">
+          <ul>
+
+            <li data-aos="fade-up">
+              <i class="bx bx-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-2">Advanced Chatbot Flows with Botpress & Stack AI<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="accordion-list-2" class="collapse show" data-bs-parent=".accordion-list">
+                <p>
+                  Our expertise in Botpress enables us to build customized AI-enabled chatbots for advanced use cases that can handle intricate algorithmic flows, providing dynamic responses based on user inputs, intent, address, and other contextual variables. Whether it's a multi-step booking process or a complex troubleshooting guide, our chatbots can guide users with precision. These chatbots can be deployed across every platform such as WhatsApp, Instagram, Slack, Telegram, Websites etc.
+                </p>
+              </div>
+            </li>
+
+            <li data-aos="fade-up">
+              <i class="bx bx-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed">Deployable Chatbots Across Any Platform<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
+                <p>
+                  Cross-platform deployment with Botpress: We understand that your customers are spread across different digital platforms. Therefore, chatbots can be seamlessly deployed on various channels such as WhatsApp, Instagram, Slack, Telegram, and websites. With over 2 billion active users worldwide, integrating a ChatGPT-driven chatbot into WhatsApp allows businesses to tap into this vast user base, making your services more accessible and driving growth.
+                </p>
+              </div>
+            </li>
+
+            <li data-aos="fade-up">
+              <i class="bx bx-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-4" class="collapsed">AI Consulting <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="accordion-list-4" class="collapse" data-bs-parent=".accordion-list">
+                <p>
+                  Amidst the influx of millions of new AI tools each week, we'll help you navigate the landscape and discern the solutions best suited to optimize your business workflows for increased productivity and efficiency. Our services include feasibility assessments to determine the viability of AI integration in your operations, use case identification to pinpoint areas ripe for AI application, performance evaluation to ensure your AI solutions are delivering the desired results, and strategy development to formulate a long-term vision for AI in your business.
+                </p>
+              </div>
+            </li>
+
+            <li data-aos="fade-up">
+              <i class="bx bx-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-5" class="collapsed">Workflow Automation with Zapier<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="accordion-list-5" class="collapse" data-bs-parent=".accordion-list">
+                <p>
+                  We leverage the power of Zapier to automate repetitive tasks across various applications. By creating automated workflows, we enable your team to focus on strategic operations, reducing manual effort and improving efficiency. For instance, we can set up a workflow where an email from a customer can automatically create a ticket in your CRM, assign it to a team member, and send a personalized response to the customer - all without any manual intervention.
+                </p>
+              </div>
+            </li>
+
+            <li data-aos="fade-up">
+              <i class="bx bx-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-6" class="collapsed">Custom Chatbots with Langchain & Vector Embeddings<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="accordion-list-6" class="collapse" data-bs-parent=".accordion-list">
+                <p>
+                  Elevate your customer experience with our custom chatbots powered by Langchain, vector embeddings, and large language models. With these advanced technologies at our fingertips, we craft AI chatbots meticulously tailored to your business needs. These chatbots deliver instant, personalized responses, adeptly handling a multitude of use cases. Whether you need a virtual assistant to answer customer inquiries, an intelligent bot to guide users through your services, or a savvy chatbot to drive engagement, our custom solutions are designed to enhance your interactions and enrich your business outcomes.
+                </p>
+              </div>
+            </li>
+
+            <li data-aos="fade-up">
+              <i class="bx bx-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-7" class="collapsed">Complete Front-end Web Development<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="accordion-list-7" class="collapse" data-bs-parent=".accordion-list">
+                <p>
+                  Transcend the ordinary with our comprehensive front-end web development services. At Tabmed, we believe in crafting digital experiences that are not only visually stunning but also functionally robust. Leveraging the latest technologies and design trends, we build websites that are intuitive, engaging, and tailored to your specific business needs. Our dedicated team of experts ensures seamless navigation, fast load times, and mobile responsiveness, offering an unmatched user experience that keeps your audience coming back for more. Let us turn your vision into a captivating reality that enhances your digital presence and propels your business forward.
+                </p>
+              </div>
+            </li>
+
+
+
+
+          </ul>
+        </div>
+
+
+      </div>
+    </section>
+
 
 
     <!-- ======= Hero Section ======= -->
