revamped entire agency page and nav bar links

--- a/pricing.html
+++ b/pricing.html
@@ -156,7 +156,7 @@
           <ul>
             <li  data-aos="fade-up">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1">Is there a free plan?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
+              <div id="accordion-list-1" class="collapse" data-bs-parent=".accordion-list">
                 <p>
                   No. At the moment, we are not offering a free plan. You can go to <a class="faqlink" href="demo.html">tabmed.hk/demo</a> and try our demo bot or <strong><a class="faqlink" href="contact.html">contact us</a></strong> for a live demo from our team.
                 </p>
@@ -165,7 +165,7 @@
 
             <li data-aos="fade-up">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-2">What is 1 message?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="accordion-list-2" class="collapse show" data-bs-parent=".accordion-list">
+              <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
                 <p>
                   1 message credit is equal to 1 complete A.I. generated response.
                 </p>
