--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html"><img src="assets/img/tabmedlogo.png"></a></h1>
+        <h1><a href="./"><img src="assets/img/tabmedlogo.png"></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -66,20 +66,20 @@
       <nav id="navbar" class="navbar">
 
         <ul>
-          <li><a class="nav-link scrollto" href="pricing.html">AI Roleplay For Education</a></li>
+          <li><a class="nav-link scrollto" href="pricing">AI Roleplay For Education</a></li>
           <li class="dropdown"><a href="#"><span>AI Doctors</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="kelly.html">Kelly - Sexual Health AI</a></li>
-              <li><a href="jason.html">Jason - Nutrition & Fitness AI</a></li>
-              <li><a href="kenneth.html">Kenenth - Mental health & Well-being AI</a></li>
-              <li><a href="diagnosis.html">Differential Diagnstic AI</a></li>
-              <li><a href="telemed.html">Tabmed Telemedicine AI App</a></li>
+              <li><a href="kelly">Kelly - Sexual Health AI</a></li>
+              <li><a href="jason">Jason - Nutrition & Fitness AI</a></li>
+              <li><a href="kenneth">Kenenth - Mental health & Well-being AI</a></li>
+              <li><a href="diagnosis">Differential Diagnstic AI</a></li>
+              <li><a href="telemed">Tabmed Telemedicine AI App</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="agency.html">Our Agency</a></li>
-          <li><a class="nav-link scrollto" href="pricing.html">Pricing</a></li>
+          <li><a class="nav-link scrollto" href="agency">Our Agency</a></li>
+          <li><a class="nav-link scrollto" href="pricing">Pricing</a></li>
           <li><a class="nav-link scrollto" href="https://app.tabmed.hk">Sign In</a></li>
-          <li><a class="getstarted scrollto" href="pricing.html">Build Your Chatbot Now</a></li>
+          <li><a class="getstarted scrollto" href="pricing">Build Your Chatbot Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -429,7 +429,7 @@
 
           <h1>Tabmed Empowers Your Business with AI Automations & Solutions</h1>
           <p class="mb-3">Tabmed is not just an AI automation agency; we are your strategic partner in harnessing the power of cutting-edge technologies to drive business growth and efficiency through chatbots and automation. </p>
-          <a target="_blank" style="text-decoration:none" href="mailto: tabmedhk@gmail.com"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-right"></i>Learn more about us</button></a>
+          <a style="text-decoration:none" href="agency.html"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-right"></i>Learn more about us</button></a>
        </div>
 
         <div class="accordion-list">
@@ -437,7 +437,7 @@
 
             <li data-aos="fade-up">
               <i class="bx bx-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-2">Advanced Chatbot Flows with Botpress & Stack AI<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="accordion-list-2" class="collapse show" data-bs-parent=".accordion-list">
+              <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
                 <p>
                   Our expertise in Botpress enables us to build customized AI-enabled chatbots for advanced use cases that can handle intricate algorithmic flows, providing dynamic responses based on user inputs, intent, address, and other contextual variables. Whether it's a multi-step booking process or a complex troubleshooting guide, our chatbots can guide users with precision. These chatbots can be deployed across every platform such as WhatsApp, Instagram, Slack, Telegram, Websites etc.
                 </p>
@@ -619,9 +619,9 @@
           <div class="col-lg-3 col-md-6 footer-contact text-decoration">
             <h3>tabmed.</h3>
             <p>
-              Build Your Custom ChatGPT for Education, Healthcare, Support, Training & Research<br><br>
+              Empowering Innovation in Healthcare & Education Through AI: Your Partner for Automation Solutions, Custom Chatbots, and Voice-enabled Roleplay Stimulators.<br><br>
               <strong>📞 Call Us:<a href="tel:+85269025557">  +852 6833 3398‬</a></strong><br>
-              <strong>📧 Email Us:<a href="mailto: tabmedhk@gmail.com">  info@tabmed.hk</a></strong><br>
+              <strong>📧 Email Us:<a href="mailto: info@tabmed.hk">  info@tabmed.hk</a></strong><br>
               <strong>📱 Instagram Us:</strong><a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram">  <strong>@tabmedhk</a></strong><br>
               <div class="social-links mt-3">
                 <a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -634,7 +634,7 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>🧳 Use Cases</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="kelly.html">Public Health Education</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="kelly">Public Health Education</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="kenneth.html">Research & Meta-analysis</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="jason.html">Course Mentor & Student Companion</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="kelly.html">Role Play & Stimulation</a></li>
