changed footer and Ai doctor in main page

--- a/index.html
+++ b/index.html
@@ -67,21 +67,20 @@
       <nav id="navbar" class="navbar">
 
         <ul>
-          <li><a class="nav-link scrollto" href="pricing">MakeGPT</a></li>
+          <li><a class="nav-link scrollto" href="makegpt">MakeGPT</a></li>
           <li><a class="nav-link scrollto" href="pricing">Dialoguify</a></li>
           <li><a class="nav-link scrollto" href="pricing">PDF2Anki</a></li>
-          <li class="dropdown"><a href="#"><span>AI Doctors</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Dr A.I</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="kelly">Kelly - Sexual Health AI</a></li>
               <li><a href="jason">Jason - Nutrition & Fitness AI</a></li>
               <li><a href="kenneth">Kenenth - Mental health & Well-being AI</a></li>
               <li><a href="diagnosis">Differential Diagnostic AI</a></li>
-              <li><a href="telemed">Tabmed Telemedicine AI App</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="agency">AI Agency</a></li>
           <li><a class="nav-link scrollto" href="https://app.tabmed.hk">Sign In</a></li>
-          <li><a class="getstarted scrollto" href="pricing">Build Your Chatbot Now</a></li>
+          <li><a class="getstarted scrollto" href="makegpt">Build Your Chatbot Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -220,11 +219,11 @@
     <div class="section-title">
 
       <h1 class="text-white">📃 Dr. A.I.</h1>
-      <h5 class="mb-5 text-light">Meet Kelly, Jason & Kenneth. Your AI healthcare advisor for answering private questions without the embarrassment in-person.</h5>
-      <a style="text-decoration:none" href="agency.html"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-down-right-square-fill"></i>Learn more</button></a>
+      <h5 class="mb-5 text-light">Meet Kelly, Jason & Kenneth. Your AI healthcare advisors for answering private questions without the embarrassment in-person.</h5>
+      <a style="text-decoration:none" href="ai"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-down-right-square-fill"></i>Learn more</button></a>
 
       <div class="text-center mt-4">
-        <img class="dialoguify" src="assets/img/home/pdf2anki.png" alt="">
+        <img class="dialoguify" src="assets/img/home/drai.png" alt="">
       </div>
    </div>
 
@@ -245,7 +244,7 @@
 
           <h1 class="mt-2">Tabmed Empowers Your Organisation with AI Automations & Solutions</h1>
           <p class="my-4">Tabmed is not just an AI automation agency; we are your strategic partner in harnessing the power of cutting-edge AI technologies to drive business growth and efficiency through custom chatbots and automation. </p>
-          <a style="text-decoration:none" href="agency.html"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-down-right-square-fill"></i>Learn more about us</button></a>
+          <a style="text-decoration:none" href="agency"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-down-right-square-fill"></i>Learn more about us</button></a>
 
 
 
@@ -280,28 +279,23 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>🧳 Use Cases</h4>
+            <h4>🧠 MakeGPT</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="kelly">Public Health Education</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="kenneth.html">Research & Meta-analysis</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="jason.html">Course Mentor & Student Companion</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="kelly.html">Role Play & Stimulation</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Documentation</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Internal Training</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="kelly.html">24/7 Customer Support</a></li>
 
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>🚀 Features</h4>
+            <h4>💬 Dialoguify</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Custom Data Training</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Unlimited Prompt Engineering</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Conversation Monitoring</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">AI Response Refinement</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Conversation Memory</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web & App Embedding</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Patient Stimulation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Language Learning</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Legal and Argument</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Pitching & Negotiation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Interview Practice</a></li>
             </ul>
           </div>
 
