added pdf2anki whole app demo

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
       <h1>🧠 MakeGPT</h1>
       <h5 class="mb-5">Build your own custom ChatGPT for education, healthcare, support, training & research.</h5>
-      <a style="text-decoration:none" href="agency.html"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-down-right-square-fill"></i>Learn more</button></a>
+      <a style="text-decoration:none" href="ai"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-down-right-square-fill"></i>Learn more</button></a>
 
       <div class="text-center mt-4">
         <img class="makegpt" src="assets/img/home/makegpt.png" alt="">
@@ -182,7 +182,7 @@
 
       <h1 class="text-white">💬 Dialoguify</h1>
       <h5 class="mb-5 text-light">Engage, learn & grow with voice-enabled AI role play simulations for your students.</h5>
-      <a style="text-decoration:none" href="agency.html"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-down-right-square-fill"></i>Learn more</button></a>
+      <a style="text-decoration:none" href="dialoguify"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-down-right-square-fill"></i>Learn more</button></a>
 
       <div class="text-center mt-4">
         <img class="dialoguify" src="assets/img/home/dialoguify.png" alt="">
@@ -201,7 +201,7 @@
 
       <h1 class="text-white">📃 PDF2Anki</h1>
       <h5 class="mb-5 text-light">Convert lecture slides, notes & PowerPoints into active recall flashcards using AI.</h5>
-      <a style="text-decoration:none" href="agency.html"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-down-right-square-fill"></i>Learn more</button></a>
+      <a style="text-decoration:none" href="pdf2anki"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-down-right-square-fill"></i>Learn more</button></a>
 
       <div class="text-center mt-4">
         <img class="dialoguify" src="assets/img/home/pdf2anki.png" alt="">
