--- a/pdf2anki.html
+++ b/pdf2anki.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>TabMed | 🧧 Meet our Lengjai Kenneth </title>
+  <title>PDF2Anki | Convert PDFs into Anki flashcards with AI.</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -106,7 +106,7 @@
               <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
               <a href="pricing.html" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn"><i class="bi bi-arrow-right-short"></i>Join Private Beta Waitlist</button></a>
-
+              <br><small class="text-light">Or try a pre-release demo below</small>
               <!-- <a href="https://docs.google.com/forms/d/1epN9MZ1ep5TM94BVjWQAzQy7Bfb1O4MSzO5xWdPSgms/viewform?edit_requested=true" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-briefcase-fill"></i>Use Cases</button></a> -->
 
             </div>
@@ -128,12 +128,12 @@
 
       <div class="section-title">
 
-        <!-- <h1>🧠 MakeGPT</h1> -->
-        <h5 class="mb-5">Pre-release Demo</h5>
+        <h1>👇 Pre-release Demo</h1>
+        <h5 class="mb-3">Join our private beta waitlist above for access to our web app with automatic summary notes, multi-choice questions, a flashcard editing user interface and more.</h5>
         <!-- <a style="text-decoration:none" href="ai"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-down-right-square-fill"></i>Learn more</button></a> -->
 
         <iframe
-          src="https://pdf2anki.streamlit.app/?embed=true"
+          src="https://pdf2anki.streamlit.app/?embed=true&embed_options=light_theme"
           height="900"
           style="width:100%;border:none;"
         ></iframe>
@@ -161,7 +161,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-6">
             <h4>Support Our Startup</h4>
-            <p>TabMed is founded by HKU medical students. At the developmental and incubation phase, we are outreaching partners and funding from surrounding networks, HKU, HKSTP and Cyberport. You can reach us by Instagram <strong><a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram">@tabmedhk</a></strong>.</p>
+            <p>TabMed is founded by HKU medical students. You can reach us by Instagram <strong><a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram">@tabmedhk</a></strong>.</p>
           </div>
         </div>
       </div>
@@ -171,50 +171,53 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>TabMed</h3>
+          <div class="col-lg-3 col-md-6 footer-contact text-decoration">
+            <h3>tabmed.</h3>
             <p>
-              <!-- A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br> -->
-              <strong>Phone:</strong><br>  +852 69025557 | +852 93085812<br>
-              <strong>Email:</strong> tabmedhk@gmail.com<br>
+              Empowering Innovation in Healthcare & Education Through AI: Your Partner for Automation Solutions, Custom Chatbots, and Voice-enabled Roleplay Stimulators.<br><br>
+              <strong>📞 Call Us:<a href="tel:+85269025557">  +852 6833 3398‬</a></strong><br>
+              <strong>📧 Email Us:<a href="mailto: info@tabmed.hk">  info@tabmed.hk</a></strong><br>
+              <strong>📱 Instagram Us:</strong><a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram">  <strong>@tabmedhk</a></strong><br>
+              <div class="social-links mt-3">
+                <a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              </div>
             </p>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>🧠 MakeGPT</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="kelly.html">Kelly AI - Sexul Health</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="jason.html">Jason AI - Nutrition & Fitness</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="kenneth.html">Kenenth AI - Mental health & Well-being</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="diagnosis.html">Differential Diagnstic AI</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Online Medical Consultation</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Our App</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="agency.html">Incorporating ChatGPT into Your Business</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="jason.html">Course Mentor & Student Companion</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Documentation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="kelly.html">24/7 Customer Support</a></li>
+
             </ul>
           </div>
-<!--
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
-          </div> -->
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Social Networks</h4>
-            <p>Follow us on Instagram <strong><a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram">@tabmedhk</a></strong> for our startup developmental journey.</p>
-            <div class="social-links mt-3">
-              <a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
-            </div>
+            <h4>💬 Dialoguify</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Patient Stimulation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Language Learning</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Legal and Argument</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Pitching & Negotiation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Interview Practice</a></li>
+            </ul>
+          </div>
+
+
+          <div class="col-lg-3 col-md-6 footer-links">
+            <h4>🥼 AI Solutions in Healthcare</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="kelly.html">Kelly - Sexual Health AI</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="jason.html">Jason - Nutrition & Fitness AI</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="kenneth.html">Kenenth - Mental health & Well-being AI</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="diagnosis.html">Differential Diagnstic AI</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Tabmed Telemedicine AI App</a></li>
+
+            </ul>
           </div>
 
         </div>
@@ -223,7 +226,14 @@
 
     <div class="container py-4">
       <div class="copyright">
-        &copy; Copyright 2023 <strong><span>TabMed Limited Company</span></strong>. All Rights Reserved
+        &copy; Copyright 2023 <strong><span>Tabmed Limited</span></strong>. All Rights Reserved.
+      </div>
+      <!-- <div class="credits">
+        < All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-bootstrap-app-landing-page-template/ -->
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
       <!-- <div class="credits">
         < All the links in the footer should remain intact. -->
