--- a/pdf2anki.html
+++ b/pdf2anki.html
@@ -133,8 +133,8 @@
         <!-- <a style="text-decoration:none" href="ai"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-down-right-square-fill"></i>Learn more</button></a> -->
 
         <iframe
-          src="https://pdf2anki.streamlit.app/?embed=true&embed_options=light_theme"
-          height="900"
+          src="https://pdf2anki.streamlit.app/?embed=true&embed_options=light_theme&embed_options=disable_scrolling"
+          height="1200"
           style="width:100%;border:none;"
         ></iframe>
      </div>
