--- a/dialoguify.html
+++ b/dialoguify.html
@@ -105,13 +105,11 @@
               <h2>Engage, learn & grow with voice-enabled AI role play simulations for your students.</h2>
               <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
-              <a href="pricing.html" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn"><i class="bi bi-arrow-right-short"></i>Join Private Beta Waitlist</button></a>
-
-              <a href="https://docs.google.com/forms/d/1epN9MZ1ep5TM94BVjWQAzQy7Bfb1O4MSzO5xWdPSgms/viewform?edit_requested=true" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-briefcase-fill"></i>Use Cases</button></a>
+              <a href="https://mailchi.mp/106ddb210e62/ko8lpthn7i" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn"><i class="bi bi-arrow-right-short"></i>Join Private Beta Waitlist</button></a>
 
               <div class="my-3">
 
-                <small>Lecture Slides. Research Papers. Documentation. Websites.<br>Support FAQs. Business Data. Public Health Information. <br>Infinite possibilites.</small>
+                <small>Patient roleplay. Debates. Conversation practice. Websites.<br>Support FAQs. Business Data. Public Health Information. <br>Infinite possibilites.</small>
 
               </div>
 
@@ -132,32 +130,32 @@
     </section>
 
 
-  <!-- ======= Hero Section ======= -->
-  <section id="hero" class="dialoguifyhero d-flex align-items-center">
-
-    <div class="container p-4">
-      <div class="row">
-        <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
-          <div>
-            <h1 class="text-white mb-4"> Dialoguify - Build Your Own AI Educator</h1>
-            <h2 class="text-white">Engage, learn & grow with voice-enabled AI role play simulations for your students.
-              <br>
-            </h2>
-
-            <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
-
-
+    <!--====== VIDEO ONE PART START ======-->
+    <section class="video-area video-one bg-black bg-gradient">
+       <div class="container">
+          <div class="row justify-content-center text-white">
+             <div class="col-lg-6 col-md-10">
+                <div class="video-title text-center">
+                     <small class="smallText">CHECK OUT ONE OF OUR WORK</small>
+                   <h2>🥼 Patient AI Stimulator</h2>
+                   <p class="text-sm mb-4">
+                      Addressing the challenge of limited opportunities for hands-on experience, our Patient Role Play App offers a novel solution for medical students to develop their communication and history-taking abilities. This application employs AI-driven virtual patients in realistic scenarios, creating an immersive, interactive platform where students can practice their empathetic conversation skills. By simulating genuine patient interactions, we eliminate the dependence on the availability of real patients for practice, thus enhancing accessibility and convenience. This innovative tool ensures that every medical student can refine their skills anytime, anywhere, driving a significant advancement in medical education.
+                   </p>
+                </div>
+                <!-- video title -->
+             </div>
           </div>
-        </div>
-        <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
-          <img src="assets/img/home/dialoguify.png" class="img-fluid" alt="">
+          <!-- row -->
+          <div class="row justify-content-center">
+             <div class="col-lg-10">
 
-
-        </div>
-      </div>
-    </div>
-
-  </section><!-- End Hero -->
+                <div style="position: relative; padding-bottom: 62.5%; height: 0;"><iframe src="https://www.loom.com/embed/34362ef55a4847d78cf2e096010ea564?sid=4397aa02-acb2-41a1-b4c8-1e17f2397756" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+             </div>
+          </div>
+          <!-- row -->
+       </div>
+       <!-- container -->
+    </section>
 
 
 
