--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
       <h1>🧠 MakeGPT</h1>
       <h5 class="mb-5">Build your own custom ChatGPT for education, healthcare, support, training & research.</h5>
-      <a style="text-decoration:none" href="ai"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-down-right-square-fill"></i>Learn more</button></a>
+      <a style="text-decoration:none" href="makegpt"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-down-right-square-fill"></i>Learn more</button></a>
 
       <div class="text-center mt-4">
         <img class="makegpt" src="assets/img/home/makegpt.png" alt="">
