--- a/pdf2anki.html
+++ b/pdf2anki.html
@@ -105,7 +105,7 @@
               <h2 class="text-white">Converts PDF files such as lecture slides, notes and PPTs into a .txt file that can be imported into Anki and converted into flashcards automatically. </h2>
               <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
-              <a href="pricing.html" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn"><i class="bi bi-arrow-right-short"></i>Join Private Beta Waitlist</button></a>
+              <a href="https://mailchi.mp/f5ac16af8b1a/pdf2anki" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn"><i class="bi bi-arrow-right-short"></i>Join Private Beta Waitlist</button></a>
               <br><small class="text-light">Or try a pre-release demo below</small>
               <!-- <a href="https://docs.google.com/forms/d/1epN9MZ1ep5TM94BVjWQAzQy7Bfb1O4MSzO5xWdPSgms/viewform?edit_requested=true" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-briefcase-fill"></i>Use Cases</button></a> -->
 
