changed all pages nav bars to be updated

--- a/kenneth.html
+++ b/kenneth.html
@@ -60,13 +60,22 @@
       </div>
 
       <nav id="navbar" class="navbar">
+
         <ul>
-          <li><a class="nav-link scrollto" href="kelly.html">Kelly AI</a></li>
-          <li><a class="nav-link scrollto" href="jason.html">Jason AI</a></li>
-          <li><a class="nav-link scrollto active" href="#hero">Kenneth AI</a></li>
-          <li><a class="nav-link scrollto" href="diagnosis.html">Differential Diagnostic AI</a></li>
-          <li><a class="nav-link scrollto" href="agency.html">Incorporating ChatGPT into Your Business</a></li>
-          <li><a class="getstarted scrollto" href="agency.html">Work With Us</a></li>
+          <li><a class="nav-link scrollto" href="makegpt">MakeGPT</a></li>
+          <li><a class="nav-link scrollto" href="dialoguify">Dialoguify</a></li>
+          <li><a class="nav-link scrollto" href="pdf2anki">PDF2Anki</a></li>
+          <li class="dropdown"><a href="#"><span>Dr A.I</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="kelly">Kelly - Sexual Health AI</a></li>
+              <li><a href="jason">Jason - Nutrition & Fitness AI</a></li>
+              <li><a href="kenneth active">Kenenth - Mental health & Well-being AI</a></li>
+              <li><a href="diagnosis">Differential Diagnostic AI</a></li>
+            </ul>
+          </li>
+          <li><a class="nav-link scrollto" href="agency">AI Agency</a></li>
+          <li><a class="nav-link scrollto" href="https://app.tabmed.hk">Sign In</a></li>
+          <li><a class="getstarted scrollto" href="makegpt">Build Your Chatbot Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
