--- a/pdf2anki.html
+++ b/pdf2anki.html
@@ -68,8 +68,8 @@
 
         <ul>
           <li><a class="nav-link scrollto" href="makegpt">MakeGPT</a></li>
-          <li><a class="nav-link scrollto" href="pricing">Dialoguify</a></li>
-          <li><a class="nav-link scrollto" href="pricing">PDF2Anki</a></li>
+          <li><a class="nav-link scrollto" href="dialoguify">Dialoguify</a></li>
+          <li><a class="nav-link active scrollto" href="pdf2anki">PDF2Anki</a></li>
           <li class="dropdown"><a href="#"><span>Dr A.I</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="kelly">Kelly - Sexual Health AI</a></li>
