--- a/agency.html
+++ b/agency.html
@@ -61,20 +61,20 @@
       <nav id="navbar" class="navbar">
 
         <ul>
-          <li><a class="nav-link scrollto" href="pricing.html">AI Roleplay For Education</a></li>
-          <li class="dropdown"><a href="#"><span>AI Doctors</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link scrollto" href="makegpt">MakeGPT</a></li>
+          <li><a class="nav-link scrollto" href="dialoguify">Dialoguify</a></li>
+          <li><a class="nav-link scrollto" href="pdf2anki">PDF2Anki</a></li>
+          <li class="dropdown"><a href="#"><span>Dr A.I</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="kelly.html">Kelly - Sexual Health AI</a></li>
-              <li><a href="jason.html">Jason - Nutrition & Fitness AI</a></li>
-              <li><a href="kenneth.html">Kenenth - Mental health & Well-being AI</a></li>
-              <li><a href="diagnosis.html">Differential Diagnstic AI</a></li>
-              <li><a href="telemed.html">Tabmed Telemedicine AI App</a></li>
+              <li><a href="kelly">Kelly - Sexual Health AI</a></li>
+              <li><a href="jason">Jason - Nutrition & Fitness AI</a></li>
+              <li><a href="kenneth">Kenenth - Mental health & Well-being AI</a></li>
+              <li><a href="diagnosis">Differential Diagnostic AI</a></li>
             </ul>
           </li>
-          <li><a class="nav-link active scrollto" href="agency.html">Our Agency</a></li>
-          <li><a class="nav-link scrollto" href="pricing.html">Pricing</a></li>
+          <li><a class="nav-link scrollto active" href="agency">AI Agency</a></li>
           <li><a class="nav-link scrollto" href="https://app.tabmed.hk">Sign In</a></li>
-          <li><a class="getstarted scrollto" href="pricing.html">Build Your Chatbot Now</a></li>
+          <li><a class="getstarted scrollto" href="makegpt">Build Your Chatbot Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
