--- a/consultation.html
+++ b/consultation.html
@@ -64,31 +64,22 @@
       </div>
 
       <nav id="navbar" class="navbar">
+
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#features">Our Service</a></li>
-          <li><a class="nav-link scrollto" href="#gallery">Our App</a></li>
-          <!-- <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
-          <li><a class="nav-link scrollto" href="#faq">F.A.Q</a></li> -->
-          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link scrollto" href="makegpt">MakeGPT</a></li>
+          <li><a class="nav-link scrollto" href="dialoguify">Dialoguify</a></li>
+          <li><a class="nav-link scrollto" href="pdf2anki">PDF2Anki</a></li>
+          <li class="dropdown"><a href="#"><span>Dr A.I</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="kelly">Kelly - Sexual Health AI</a></li>
+              <li><a href="jason">Jason - Nutrition & Fitness AI</a></li>
+              <li><a href="kenneth">Kenenth - Mental health & Well-being AI</a></li>
+              <li><a href="diagnosis">Differential Diagnostic AI</a></li>
             </ul>
-          </li> -->
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="mailto: tabmedhk@gmail.com">Partner With Us</a></li>
+          </li>
+          <li><a class="nav-link scrollto" href="agency">AI Agency</a></li>
+          <li><a class="nav-link scrollto" href="https://app.tabmed.hk">Sign In</a></li>
+          <li><a class="getstarted scrollto" href="makegpt">Build Your Chatbot Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
