--- a/pricing.html
+++ b/pricing.html
@@ -66,47 +66,22 @@
       </div>
 
       <nav id="navbar" class="navbar">
-        <ul>
-          <li class="dropdown"><a href="#"><span>AI Doctors</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
 
-              <!-- <li class="dropdown"><a href="#"><span>Dr. Bots</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="kelly.html">Kelly - Sexual Health AI</a></li>
-                  <li><a href="jason.html">Jason - Nutrition & Fitness AI</a></li>
-                  <li><a href="kenneth.html">Kenenth - Mental health & Well-being AI</a></li>
-                </ul>
-              </li> -->
-              <li><a href="kelly.html">Kelly - Sexual Health AI</a></li>
-              <li><a href="jason.html">Jason - Nutrition & Fitness AI</a></li>
-              <li><a href="kenneth.html">Kenenth - Mental health & Well-being AI</a></li>
-              <li><a href="#">Differential Diagnstic AI</a></li>
-              <li><a href="telemed.html">Tabmed Telemedicine AI App</a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a href="#"><span>Use Cases</span> <i class="bi bi-chevron-down"></i></a>
+        <ul>
+          <li><a class="nav-link scrollto" href="makegpt">MakeGPT</a></li>
+          <li><a class="nav-link scrollto" href="dialoguify">Dialoguify</a></li>
+          <li><a class="nav-link scrollto" href="pdf2anki">PDF2Anki</a></li>
+          <li class="dropdown"><a href="#"><span>Dr A.I</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="kelly">Kelly - Sexual Health AI</a></li>
+              <li><a href="jason">Jason - Nutrition & Fitness AI</a></li>
+              <li><a href="kenneth">Kenenth - Mental health & Well-being AI</a></li>
+              <li><a href="diagnosis">Differential Diagnostic AI</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="https://tabmed.mintlify.app/introduction">Documentation</a></li>
-          <li><a class="nav-link scrollto" href="kenneth.html">Pricing</a></li>
-          <li><a class="nav-link scrollto" href="kenneth.html">Sign In</a></li>
-          <!-- <li><a class="nav-link scrollto" href="diagnosis.html">Differential Diagnostic AI</a></li> -->
-          <!-- <li><a class="nav-link scrollto" href="agency.html">Incorporating ChatGPT into Your Business</a></li> -->
-          <li><a class="getstarted scrollto" href="agency.html">Start Your Free Trial</a></li>
+          <li><a class="nav-link scrollto" href="agency">AI Agency</a></li>
+          <li><a class="nav-link scrollto" href="https://app.tabmed.hk">Sign In</a></li>
+          <li><a class="getstarted scrollto" href="makegpt">Build Your Chatbot Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
